--- a/.github/workflows/ci-platformio.yml
+++ b/.github/workflows/ci-platformio.yml
@@ -28,5 +28,9 @@ jobs:
           pip install --upgrade platformio
       - name: Install library dependencies
         run: pio lib -g install 1
+      - name: Install library manually
+        run: |
+          chmod 755 ./download_scservo.sh
+          ./download_scservo.sh
       - name: Run PlatformIO
         run: pio run
