--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,12 @@ platform = espressif32
 board = m5stack-atom
 framework = arduino
 monitor_speed = 115200
+build_flags =
+  -D M5ATOM
+[env:seeed_xiao]
+platform = atmelsam
+board = seeed_xiao
+framework = arduino
+monitor_speed = 115200
+build_flags =
+  -D XIAO
