--- a/platformio.ini
+++ b/platformio.ini
@@ -8,17 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:m5stick-c]
+[platformio]
+default_envs = m5stack-atom
+monitor_speed = 115200
+
+[env:m5stack-atom]
 platform = espressif32
 board = m5stack-atom
 framework = arduino
-monitor_speed = 115200
-build_flags =
-  -D M5ATOM
+
 [env:seeed_xiao]
 platform = atmelsam
 board = seeed_xiao
 framework = arduino
-monitor_speed = 115200
-build_flags =
-  -D XIAO
+
+[env:m5stack-core1]
+platform = espressif32
+board = m5stack-core-esp32
+framework = arduino
