--- a/platformio.ini
+++ b/platformio.ini
@@ -10,19 +10,46 @@
 
 [platformio]
 default_envs = m5stack-atom
-monitor_speed = 115200
+
+; [common]
+; lib_deps_external =
+;     https://github.com/mongonta0716/SCServo.git
 
 [env:m5stack-atom]
 platform = espressif32
 board = m5stack-atom
-framework = arduino
-
+framework=arduino
+monitor_speed = 115200
+; lib_deps =
+;     ${common.lib_deps_external}
 [env:seeed_xiao]
 platform = atmelsam
 board = seeed_xiao
-framework = arduino
+framework=arduino
+; lib_deps =
+;     ${common.lib_deps_external}
 
 [env:m5stack-core1]
+
 platform = espressif32
 board = m5stack-core-esp32
-framework = arduino
+framework=arduino
+lib_deps =
+    m5stack/M5Unified
+monitor_speed = 115200
+[env:m5stack-core2]
+platform = espressif32
+board = m5stack-core2
+framework=arduino
+monitor_speed = 115200
+lib_deps =
+    m5stack/M5Unified
+
+[env:m5stack-stamps3]
+; m5stack-stamps3, m5stack-capsule
+platform = espressif32
+board = m5stack-stamps3
+framework=arduino
+lib_deps =
+    m5stack/M5Unified
+monitor_speed = 115200
